--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "nunjucks": "^3.2.4"
+  },
+  "devDependencies": {
+    "gulp-sass": "^5.1.0"
   }
 }
