--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
-    "gulp": "^4.0",
+    "gulp": "^4.0.2",
     "nunjucks": "^3.2.4",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "saxon-js": "^2.6.0",
+    "xslt3": "^2.6.0"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "gulp-sass": "^5.1.0"
   }
 }
